--- a/src/main/resources/templates/tasks/itemTasks.html
+++ b/src/main/resources/templates/tasks/itemTasks.html
@@ -1,4 +1,5 @@
 <!-- 内容区域 -->
+
 <div class="container-fluid am-cf"  style="padding: 25px">
         <div class="row">
             <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
@@ -35,7 +36,7 @@
                     </div>
                     <div class="widget-body  am-fr">
                         <div class="am-scrollable-horizontal " style="height: 330px;overflow-y: auto">
-                            <table width="100%" class="am-table am-table-compact am-text-nowrap tpl-table-black example-r ">
+                            <table width="100%" class="am-table-centered am-table am-table-compact am-text-nowrap tpl-table-black example-r ">
                                 <thead>
                                 <tr>
                                     <th>任务名称</th>
@@ -85,7 +86,7 @@
                     </div>
                     <div class="widget-body  am-fr">
                         <div class="am-scrollable-horizontal " style="height: 330px;overflow-y: auto">
-                            <table width="100%" class="am-table am-table-compact am-text-nowrap tpl-table-black example-r "
+                            <table width="100%" class="am-table-centered am-table am-table-compact am-text-nowrap tpl-table-black example-r "
                             >
                                 <thead>
                                 <tr>
@@ -118,32 +119,40 @@
 <script>
     $(function () {
         $('.example-r').DataTable({
-
+            bRetrieve: true,
+            paging: false,
+            searching:false,
             bInfo: false, //页脚信息
-            dom: 'ti'
         });
     });
     deleteItem=function (ele) {
         itemDelId  = ele.value;
-        $.ajax({
-            type: "POST",
-            url: "item/deleteItem",
-            // contentType: "application/json; charset=utf-8",
-            // data: JSON.stringify(GetJsonData()),
-            data: {"itemId": itemDelId},
-            // dataType: "json",
-            success: function (message) {
-                alert("删除成功！");
-                location.reload();
+        $('#my-confirm-item').modal({
+            relatedTarget: this,
+            onConfirm: function(options) {
+                $.ajax({
+                    type: "POST",
+                    url: "item/deleteItem",
+                    // contentType: "application/json; charset=utf-8",
+                    // data: JSON.stringify(GetJsonData()),
+                    data: {"itemId": itemDelId},
+                    // dataType: "json",
+                    success: function (message) {
+                        alert("删除成功！");
+                        location.reload();
+                    },
+                    error: function (message) {
+                        console.log(+message);
+                        //$("#request-process-patent").html("提交数据失败！");
+                        alert("该项目可能还有任务,请确认！");
+                        location.reload();
+                    }
+                });
             },
-            error: function (message) {
-                console.log(+message);
-                //$("#request-process-patent").html("提交数据失败！");
-                alert("该项目可能还有任务,请确认！");
-                location.reload();
+            // closeOnConfirm: false,
+            onCancel: function() {
             }
         });
-
     }
 </script>
 </body>
