--- a/src/main/resources/templates/tasks/itemTasks.html
+++ b/src/main/resources/templates/tasks/itemTasks.html
@@ -138,14 +138,16 @@
                     data: {"itemId": itemDelId},
                     // dataType: "json",
                     success: function (message) {
-                        alert("删除成功！");
-                        location.reload();
+                        // alert("删除成功！");
+                        // location.reload();
+                        closereload("删除成功！","reload");
                     },
                     error: function (message) {
-                        console.log(+message);
+                        // console.log(+message);
                         //$("#request-process-patent").html("提交数据失败！");
-                        alert("该项目可能还有任务,请确认！");
-                        location.reload();
+                        // alert("该项目可能还有任务,请确认！");
+                        // location.reload();
+                        closereload("该项目可能还有任务,请确认！","loadTable");
                     }
                 });
             },
